// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`immutableToJS convertAllImmutablePropsToJS converts all immutable props to built in js 1`] = `
<DocumentFragment>
  <span
    immutableprop="[object Object]"
    mutableprop="[object Object]"
    primitiveprop="string"
  />
</DocumentFragment>
`;

exports[`immutableToJS convertSomeImmutablePropsToJS converts some immutable props to built in js 1`] = `
<DocumentFragment>
  <span
    immutableprop1="[object Object]"
    immutableprop2="Map { \\"foo\\": \\"bar\\" }"
    mutableprop="[object Object]"
    primitiveprop="string"
  />
</DocumentFragment>
`;
